# learn-opengl-wgpu

./: README.md
t101-window/: Cargo.toml
t101-window/src/: main.rs
t102-triangle/: Cargo.toml
t102-triangle-e01/: Cargo.toml
t102-triangle-e01/src/: main.rs  runner.rs  vertex.rs
t102-triangle-e02/: Cargo.toml
t102-triangle-e02/src/: main.rs  runner.rs  vertex.rs
t102-triangle-e03/: Cargo.toml
t102-triangle-e03/src/: main.rs  runner.rs  vertex.rs
t102-triangle/src/: main.rs  runner.rs  vertex.rs
t103-shader/: Cargo.toml
t103-shader-e01/: Cargo.toml
t103-shader-e01/src/: main.rs  runner.rs  vertex.rs
t103-shader-e02/: Cargo.toml
t103-shader-e02/src/: lib.rs  main.rs  offset_uniform.rs  runner.rs  vertex.rs
t103-shader-e03/: Cargo.toml
t103-shader-e03/src/: main.rs  runner.rs  vertex.rs
t103-shader/src/: lib.rs  main.rs  runner.rs  time_uniform.rs  vertex.rs
t104-texture/: Cargo.toml
t104-texture-e01/: Cargo.toml
t104-texture-e01/assets/shader/: shader.wgsl
t104-texture-e01/src/: main.rs  runner.rs  texture.rs  vertex.rs
t104-texture-e02/: Cargo.toml
t104-texture-e02/src/: main.rs  runner.rs  texture.rs  vertex.rs
t104-texture-e03/: Cargo.toml
t104-texture-e03/assets/shader/: shader.wgsl
t104-texture-e03/src/: main.rs  runner.rs  texture.rs  vertex.rs
t104-texture-e04/: Cargo.toml
t104-texture-e04/src/: main.rs  runner.rs  texture.rs
t104-texture/src/: lib.rs  main.rs  runner.rs  vertex.rs
t105-transform/: Cargo.toml
t105-transform-e01/: Cargo.toml
t105-transform-e01/src/: main.rs  runner.rs  texture.rs  transform.rs  vertex.rs
t105-transform-e02/: Cargo.toml
t105-transform-e02/src/: main.rs  runner.rs  texture.rs  transform.rs  vertex.rs
t105-transform/src/: main.rs  runner.rs  texture.rs  (+2 more)
t106-coord/: Cargo.toml
t106-coord-e03/: Cargo.toml
t106-coord-e03/assets/shader/: shader.wgsl
t106-coord-e03/src/: lib.rs  runner.rs  vertex.rs
t201-color/: Cargo.toml
t201-color/assets/shader/: shader_1.wgsl
t201-color/src/: camera.rs  lib.rs  runner.rs  vertex.rs
t207-gltf/: Cargo.toml
t309-instances/: Cargo.toml
t403-shadow-dir/: Cargo.toml
(+204 files in other folders)
