[package]
name = "t104-texture-e01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.13", features = ["derive"]}
env_logger = "0.10.0"
image = {version = "0.24.6", features = ["jpeg", "png"]}
log = "0.4"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28"
